--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,11 @@
             "label": "build",
             "type": "shell",
             "command": "rollup -i src/main.js -o dist/main.js",
-            "problemMatcher": []
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
